First pass at improving curation of contact & project links

--- a/software.html
+++ b/software.html
@@ -15,8 +15,8 @@ title: Forrest Wolf - Software
     <ul>
       <li><a href="http://170.75.161.61:8080/">Text-prediction</a></li>
       <li><a href="https://wrong-calculator.vercel.app/">Wrong Calculator</a></li>
-      <li><a href="https://www.npmjs.com/package/meristem">Meristem</a></li>
       <li><a href="https://github.com/ForrestWeiswolf/text-stat-watch">Text-stat-watch</a></li>
+      <li><a href="https://www.npmjs.com/package/meristem">Meristem</a></li>
       <li><s><a href="https://github.com/ForrestWeiswolf/email-discord-reposter">Email-to-discord reposter</a></s>
         (deprecated)</li>
       <li><s><a href="https://github.com/Bluegrass-Grief-Owls/coordin-eat">Coordin-Eat</a></s> (not currently hosted)
@@ -35,8 +35,9 @@ title: Forrest Wolf - Software
       <li>
         <a href="https://pypi.org/project/pytest-localstack/">Pytest-localstack</a>
       </li>
-      <li><a href="https://www.lesswrong.com/">LessWrong</a></li>
-      <li><a href="https://github.com/nodejs/node/pull/19659">NodeJS</a></li>
+      <li>
+        <a href="https://github.com/nodejs/node/pull/19659">NodeJS</a>
+      </li>
       <li>
         <a href="https://forrestweiswolf.github.io/random-motifs/">Random Motifs</a>
       </li>
