Fix linkedin link

--- a/software.html
+++ b/software.html
@@ -45,7 +45,7 @@ title: Forrest Wolf - Software
 
     <br />
 
-    <p>More details on my work history can be found on <a href="https://www.linkedin.com/in/forrest-wolf/">LinkedIn</a>,
+    <p>More details on my work history can be found on <a href="https://www.linkedin.com/in/franklin-wolf/">LinkedIn</a>,
       and more of my side projects and open source contributions can be found on <a
         href="https://github.com/ForrestWeiswolf">Github</a>.</p>
 
