Add Manifold compare predictions link

--- a/software.html
+++ b/software.html
@@ -13,6 +13,7 @@ title: Forrest Wolf - Software
 
     <p>Some side-projects I've built outside of work include:</p>
     <ul>
+      <li><a href="https://manifold-compare-predictions.vercel.app/">Manifold compare predictions</a></li>
       <li><a href="http://170.75.161.61:8080/">Text-prediction</a></li>
       <li><a href="https://wrong-calculator.vercel.app/">Wrong Calculator</a></li>
       <li><a href="https://github.com/ForrestWeiswolf/text-stat-watch">Text-stat-watch</a></li>
