Add Anemoi Suite to music page

--- a/music.html
+++ b/music.html
@@ -25,6 +25,19 @@ title: Forrest Wolf - Music
 
   <section class="project flex">
     <h2 class="left-side">
+      <img src="{{ site.url }}/assets/images/anemoi-suite-cover.png"
+        alt="Album cover for 'Anemoi Suite', consisting of three photos of the sky, each filling one third of the image">
+      <a href="https://forrestwolf.bandcamp.com/album/anemoi-suite">Anemoi Suite</a>
+    </h2>
+    <div class="project-info right-side">
+      <p>
+        Three compositions on the bowed psaltery; written circa 2015, recorded and released May 2025.
+      </p>
+    </div>
+  </section>
+
+  <section class="project flex">
+    <h2 class="left-side">
       <img src="{{ site.url }}/assets/images/remember-the-world-cover.png"
         alt="Album cover for 'Remember the World', consisting of a stylized moon in the center of a circle lined with irregular inward-facing triangles, drawn in white on black">
       <a href="https://forrestwolf.bandcamp.com/album/remember-the-world">Remember the World</a>
