--- a/software.html
+++ b/software.html
@@ -31,6 +31,9 @@ title: Forrest Wolf - Software
     <p>Some open-source projects which I have contributed to include:</p>
     <ul>
       <li>
+        <a href="https://fatebook.io/">Fatebook.io</a>
+      </li>
+      <li>
         <a href="https://manifold.markets/">Manifold Markets</a>
       </li>
       <li>
