Add descriptions of side projects

--- a/software.html
+++ b/software.html
@@ -13,14 +13,14 @@ title: Forrest Wolf - Software
 
     <p>Some side-projects I've built outside of work include:</p>
     <ul>
-      <li><a href="https://manifold-compare-predictions.vercel.app/">Manifold compare predictions</a></li>
-      <li><a href="http://170.75.161.61:8080/">Text-prediction</a></li>
-      <li><a href="https://wrong-calculator.vercel.app/">Wrong Calculator</a></li>
-      <li><a href="https://github.com/ForrestWeiswolf/text-stat-watch">Text-stat-watch</a></li>
-      <li><a href="https://www.npmjs.com/package/meristem">Meristem</a></li>
+      <li><a href="https://manifold-compare-predictions.vercel.app/">Manifold compare predictions</a> - a webapp to compare the predictions of two users on Manifold Markets.</li>
+      <li><a href="http://170.75.161.61:8080/">Text-prediction</a> - a demo of predicting likely next words based on a given source text using tries</li>
+      <li><a href="https://wrong-calculator.vercel.app/">Wrong Calculator</a> - a calculator that gives deliberately wrong answers, inspired by <a href="https://xkcd.com/2313">https://xkcd.com/2313</a></li>
+      <li><a href="https://github.com/ForrestWeiswolf/text-stat-watch">text-stat-watch</a> - a command-line tool to continuously display the number of matches for given regexes in a given file.</li>
+      <li><a href="https://www.npmjs.com/package/meristem">Meristem</a>, a lightweight Javascript library for procedural text generation using a context-free grammar.</li>
       <li><s><a href="https://github.com/ForrestWeiswolf/email-discord-reposter">Email-to-discord reposter</a></s>
-        (deprecated)</li>
-      <li><s><a href="https://github.com/Bluegrass-Grief-Owls/coordin-eat">Coordin-Eat</a></s> (not currently hosted)
+        (deprecated) - a bot that automatically reposted messages from a mailing list to a Discord server</li>
+      <li><s><a href="https://github.com/Bluegrass-Grief-Owls/coordin-eat">Coordin-Eat</a></s> (not currently hosted) - a mobile-first web app to ease the pain of finding the perfect spot for dinner with your geographically inconvenient friends
       </li>
       <li>
         The <a href="http://localhost:4000/hidden/hidden-pages-explanation.html">hidden/encrypted</a> pages of this
